# GamerGrove

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  config.py  docker-compose.yaml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.ebextensions/: 01_fastapi.config
.husky/: pre-commit
api/: Dockerfile  Dockerfile.dev  authenticator.py  main.py  seederfile.py  settings.py
api/.ebextensions/: 01_fastapi.config
api/migrations/: 002_icon_table.py  003_accounts_table.py  004_accounts_password_history_table.py  005_accounts_password_tokens.py  006_boards_table.py  007_gamesdb_table.py  007_libraries_table.py  007_reviews_table.py  008_comments_table.py  008_reviews_table.py  009_votes_table.py  010_comments_table.py  010_storesdb_table.py  011_screenshots_table.py  012_storesdb_table.py  012_uploads_table.py  013_votes_table.py  014_votes_table.py  __init__.py  __main__.py
api/queries/: accounts.py  boards.py  comments.py  games.py  icons.py  libraries.py  replies.py  reviews.py  screenshots.py  stores.py  votes.py
api/routers/: accounts.py  boards.py  comments.py  games.py  icons.py  libraries.py  replies.py  reviews.py  screenshots.py  stores.py  votes.py
api/tests/: test_get_libraries.py  test_icons.py  test_reviews.py  test_stores.py
docs/: ghi-design.md
ghi/: .eslintrc.cjs  404.html  Dockerfile  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
ghi/.husky/_/: husky.sh
ghi/src/: App.css  App.jsx  DownPage.jsx  Home.jsx  index.css  main.jsx  vite-env.d.ts
ghi/src/components/Accounts/: Controllers.css  Controllers.jsx  DeleteAccountForm.jsx  ForgotPasswordForm.jsx  Login.jsx  Settings.css  Settings.jsx  SignUpForm.jsx  Welcome.jsx  WelcomeBack.jsx
ghi/src/components/Boards/: Board.css  Board.jsx  BoardForm.jsx  DeleteBoardForm.jsx  UpdateBoardForm.jsx  boardPage.css  boardPage.jsx
ghi/src/components/Cards/: allGameCard.css  allGameCard.jsx  boardCard.css  boardCard.jsx  boardGameCard.css  boardGameCard.jsx  combinedCards.jsx  gameCard.css  gameCard.jsx  homeGameCard.css  homeGameCard.jsx  largeNonUserReviewCard.jsx  largeUserReviewCard.css  largeUserReviewCard.jsx  reviewCard.jsx  screenshotsCard.css  screenshotsCard.jsx  userLikeCard.css  userLikeCard.jsx  userReviewCard.css  userReviewCard.jsx  wishlistCard.css  wishlistCard.jsx
ghi/src/components/Dashboard/: dashboard.css  dashboard.jsx
ghi/src/components/GameDetails/: StarRating.jsx  gameDetails.css  gameDetails.jsx  nonUserGameDetails.jsx
ghi/src/components/Games/: Listgames.css  Listgames.jsx
ghi/src/components/Home/: Genre.jsx  Landing.css  Landing.jsx  Menu.jsx  Nav.css  Nav.jsx  Rows.css  Rows.jsx  sideMenu.css  sideMenu.jsx
ghi/src/components/Icon/: icon.jsx
ghi/src/components/Reviews/: Review.css  (+3 more)
(+4 files in other folders)
